syntax = "proto3";

package sharepubapi_v1;

import "IssuingAttributes.proto";


message ThirdPartyAttribute {
    bytes issuance_token = 1;
    IssuingAttributes issuing_attributes = 2;
}
